[INFER] Use defineProperty when initializing singleton arrays, bug 647463.